# trust-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/synpareia_trust_mcp/: __init__.py  app.py  config.py  conversations.py  guides.py  journal.py  profile.py  providers.py  resources.py  server.py
src/synpareia_trust_mcp/tools/: __init__.py  attested_reputation.py  commitment.py  conversation.py  directory.py  identity.py  media_signals.py  orient.py  recall.py  recording.py  signed.py  trust.py  witness.py
tests/: conftest.py  test_commitments.py  test_config.py  test_conversations.py  test_journal.py  test_mcp_integration.py  test_profile.py  test_resources.py  test_signing.py  test_tools_attested_reputation.py  test_tools_directory.py  test_tools_media_signals.py  test_tools_recall.py  test_tools_signed.py  test_witness.py
tests/adversarial/: test_enumeration.py  test_injection.py  test_pentest_2026_04_30.py  test_permissions.py  test_resource_limits.py  test_state_corruption.py
tests/fuzz/: test_fuzz_tool_inputs.py
tests/lifecycle/: test_lifecycle.py
tests/scenarios/: __init__.py  test_01_orient_and_discover.py  test_02_make_and_verify_claim.py  test_03_prove_independence.py  test_04_record_full_interaction.py  test_05_evaluate_agent_trust.py  test_06_witness_integration.py  test_07_error_handling.py  test_08_zero_config_works.py
tests/stubs/: __init__.py  fixtures.py  moltbook.py  moltrust.py  synpareia_network.py  test_providers_with_stubs.py  test_stubs.py  witness.py
