[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synpareia-trust-mcp"
version = "0.2.0"
description = "Identity and trust tools for AI agents — MCP server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Synpareia", email = "hello@synpareia.com" },
]
keywords = ["ai", "agents", "trust", "identity", "mcp", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "synpareia[witness]>=0.2.0",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "bandit>=1.8",
]

[project.scripts]
synpareia-trust-mcp = "synpareia_trust_mcp.server:main"

[project.urls]
Homepage = "https://synpareia.com"
Repository = "https://github.com/synpareia/trust-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/synpareia_trust_mcp"]

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
# MCP tool return types are inherently untyped JSON dicts
disable_error_code = ["type-arg"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = [
    "B101",  # assert — used for type narrowing of optional attributes
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
# MCP tools/resources need Context/ServerSession at runtime for FastMCP introspection
"src/synpareia_trust_mcp/tools/*.py" = ["TCH002"]
"src/synpareia_trust_mcp/resources.py" = ["TCH002"]
# Path/ProfileManager used at runtime in type hints (no `from __future__ import annotations`)
"src/synpareia_trust_mcp/conversations.py" = ["TCH001", "TCH003"]
"src/synpareia_trust_mcp/profile.py" = ["TCH003"]
# Content-heavy files: area guides and orient output are user-facing prose
"src/synpareia_trust_mcp/guides.py" = ["E501"]
"src/synpareia_trust_mcp/tools/orient.py" = ["E501"]
# Test fixtures use annotations at runtime for pytest
"tests/*.py" = ["TCH001", "TCH003"]
